# code-monitor

./: .dockerignore  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.client  Dockerfile.server  Makefile  PLANO-DE-ATIVIDADES.md  PLANO-MESTRE-OPEN-SOURCE.md  README.md  WINDOWS_BUILD.md  client-config.example.toml  config.example.toml  docker-compose.yml  generate-certs.sh  install.ps1  install.sh  necessidade.md
.github/: THIRD_PARTY_ACTIONS.md
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml
client/src/: cli.rs  client.rs  config.rs  dashboard.rs  main.rs  storage.rs  tls.rs  ui.rs
client/src/dashboard/: data.rs  render.rs
client/src/dashboard/render/: databases.rs  popups.rs  processes.rs  tabs.rs
doc/: APT_REPOSITORY_GUIDE.md
docsx/: README.md
docsx/00-EXECUCAO/: 01-gap-analysis.md  02-aplicacao-infra.md  03-backlog.md  04-deployment-plan.md  05-decisoes.md  06-installers.md  README.md
docsx/01-PRODUTO/: cost-insights.md  diferenciais.md  funcionalidades-atuais.md  visao-geral.md
docsx/02-MERCADO/: analise-competitiva.md  falhas-concorrentes.md  posicionamento.md  precos-mercado.md
docsx/03-ESTRATEGIA/: como-vencer.md  go-to-market.md  marketing.md  modelo-negocio.md
docsx/04-ROADMAP/: fase1-fundacao.md  fase2-expansao.md  fase3-escala.md  fase4-lideranca.md  visao-12-meses.md
docsx/05-TECNICO/: API-GRPC.md  arquitetura-futura.md  implementacao-curto-prazo.md  implementacao-medio-prazo.md  melhorias-infra.md
docsx/06-ACAO/: checklist-lancamento.md  metricas-sucesso.md  quick-wins.md
server/: Cargo.toml
server/src/: config.rs  health.rs  main.rs  metrics.rs  monitor.rs  service.rs  tls.rs
server/src/collectors/: docker.rs  mariadb.rs  mod.rs  postgres.rs  systemd.rs
service/: README.md
service/linux/: code-monitor-server.service  install.sh  uninstall.sh
service/macos/: com.codemonitor.server.plist  install.sh  uninstall.sh
service/windows/: install-nssm.ps1  install-task.ps1  uninstall.ps1
shared/: Cargo.toml  build.rs
shared/src/: alerts.rs  lib.rs  notifications.rs
shared/src/proto/: monitoring.proto
