[workspace]
resolver = "2"
members = [
    "shared",
    "server",
    "client"
]

# Workspace dependencies
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
crossterm = "0.27"
tui = "0.19"
indicatif = "0.17"
base64 = "0.22"
sysinfo = "0.29"
rust_decimal = { version = "1.0", features = ["serde-float"] }
tokio-stream = "0.1"
toml = "0.8"
bincode = "1.3"
tempfile = "3.0"

# Workspace resolver
resolver = "2"