[package]
name = "monitor-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Client-specific dependencies
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
tui = "0.19"
indicatif = "0.17"
rust_decimal = { version = "1.0", features = ["serde-float"] }
base64 = "0.22"
tokio-stream = "0.1"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http2"] }
tower = "0.4"
tokio-rustls = { version = "0.24", features = ["dangerous_configuration"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"

# Storage
rusqlite = { version = "0.30", features = ["bundled"] }
csv = "1.3"

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
tonic-build = "0.10"