[package]
name = "monitor-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Server-specific dependencies
shared = { path = "../shared" }
sysinfo = "0.29"
nix = { version = "0.27", features = ["net"] }
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
base64 = "0.21"
prost-types = "0.12"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tempfile = "3.0"
tokio-stream = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# TLS
rustls = "0.22"
tonic-rustls = "0.1"

# Docker
bollard = "0.16"
async-trait = "0.1"
futures-util = "0.3"

# Postgres
tokio-postgres = "0.7"

# MariaDB
mysql_async = "0.36"

[build-dependencies]
tonic-build = "0.10"