[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data structures and protocols shared between server and client
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async traits and HTTP
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.10"